initial work for rounded theme